update project text

--- a/projects/dixa-accessibility-guidelines/index.html
+++ b/projects/dixa-accessibility-guidelines/index.html
@@ -57,7 +57,7 @@
             />
           </figure>
         </section>
-        <section class="section highlight">
+        <section class="section">
           <div class="text">
             <h2>How it started</h2>
             <p>
@@ -78,6 +78,12 @@
               all users.
             </p>
           </div>
+        </section>
+        <section class="section gallery">
+          <figure class="figure">
+            <img src="categories.png" />
+            <figcaption>Accessibility guidelines sample</figcaption>
+          </figure>
         </section>
         <section class="section">
           <div class="text">
@@ -105,8 +111,8 @@
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img src="categories.png" />
-            <figcaption>Accessibility guidelines sample</figcaption>
+            <img src="example.png" />
+            <figcaption>Accessibility guidelines example</figcaption>
           </figure>
         </section>
         <section class="section">
@@ -126,12 +132,6 @@
               confusions when applying these rules.
             </p>
           </div>
-        </section>
-        <section class="section gallery">
-          <figure class="figure">
-            <img src="example.png" />
-            <figcaption>Accessibility guidelines example</figcaption>
-          </figure>
         </section>
       </article>
 
