--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -39,6 +39,10 @@
               Back</a
             >
             <h1>Dixa Design System</h1>
+            <p>
+              If a strong house needs a strong foundation, then a strong app
+              needs a strong design system.
+            </p>
           </div>
         </header>
         <section class="section gallery">
@@ -49,20 +53,73 @@
             />
           </figure>
         </section>
+        <section class="section">
+          <div class="text">
+            <h2>The Challenge</h2>
+            <p>
+              When I joined the Dixa design team the Figma Design System was
+              poorly maintained, missing components, did not accurately reflect
+              the implemented components and had no dedicated maintainer.
+            </p>
+            <p>
+              This caused designers to frequently detach instances of components
+              to modify them and even create components from scratch, this
+              frustrated designers and slowed down the design process.
+            </p>
+          </div>
+        </section>
         <section class="section gallery">
           <figure class="figure">
             <img src="layout.png" />
           </figure>
+        </section>
+        <section class="section">
+          <div class="text">
+            <h2>The Solution</h2>
+            <p>
+              Being passionate about design systems I volunteered to become the
+              dedicated maintainer of the design system and worked with the Head
+              of Product Design to identify key areas of improvement and created
+              a plan to address them.
+            </p>
+            <p>
+              I began by doing a comprehensive audit of the existing components,
+              identifying missing components, and addressing differences between
+              Figma and live components. I also rebuilt the component in Figma
+              to utilise the latest features like Auto Layout, Variants, Text
+              and Boolean Props, and Instance Swaps.
+            </p>
+          </div>
         </section>
         <section class="section gallery">
           <figure class="figure">
             <img src="avatar.png" />
           </figure>
         </section>
-        <section class="section gallery">
-          <figure class="figure">
-            <img src="details.png" />
-          </figure>
+        <section class="section">
+          <div class="text">
+            <h2>The Results</h2>
+            <p>
+              The improved components were rolled out slowly over several months
+              when each was ready. They have been received well by both
+              designers and developers for their ease of use and accuracy to the
+              implemented components.
+            </p>
+          </div>
+        </section>
+        <section class="section highlight">
+          <div class="text">
+            <blockquote>
+              “Hey Ben - just want to say, amazing work on the design system -
+              I've been used to copy/detach and customize them because they were
+              always missing one option like disabled. But the ones you've
+              recreated are perfect, it saves me so much time. Thanks”
+            </blockquote>
+            <p>
+              <strong>Hadrien Chastant - Product Designer @ Dixa</strong><br />
+              Direct Message in Slack, May 16th
+            </p>
+          </div>
         </section>
       </article>
 
