--- a/projects/elevio-mobile-app/index.html
+++ b/projects/elevio-mobile-app/index.html
@@ -39,6 +39,10 @@
               Back
             </a>
             <h1 class="test">Elevio Mobile App</h1>
+            <p>
+              A world-class scheduling and workforce management solution, now on
+              your phone.
+            </p>
           </div>
         </header>
         <section class="section gallery">
@@ -49,15 +53,65 @@
             />
           </figure>
         </section>
+        <section class="section">
+          <div class="text">
+            <h2>The Challenge</h2>
+            <p>
+              The Rotageek team wanted to create a native iOS and Android app so
+              that users could securely access their schedules on their own
+              devices, rather than a shared computer or tablet at their
+              workplace.
+            </p>
+            <p>
+              Users would also need to clock in and out of shifts, request leave
+              and manage their availability from anywhere at anytime through an
+              interface that was optimised for mobile devices.
+            </p>
+          </div>
+        </section>
         <section class="section gallery">
           <figure class="figure">
             <img src="screens-1.png" />
+            <figcaption>Leave, Dashboard and Availability screens</figcaption>
           </figure>
+        </section>
+        <section class="section">
+          <div class="text">
+            <h2>The Solution</h2>
+            <p>
+              Working as a part of the product and design team, I helped to
+              create wireframes and high-fidelity designs in Figma which were
+              reviewed in collaboration with the development team to validate
+              technology choices and plan out sprint work.
+            </p>
+            <p>
+              After finalising the designs for the initial screens, I created a
+              semi-functional prototype in React Native that the developers
+              could build upon, to ensure that the implemented user interface
+              perfectly matched the design concepts.
+            </p>
+          </div>
         </section>
         <section class="section gallery">
           <figure class="figure">
             <img src="screens-2.png" />
+            <figcaption>
+              Available Shifts, My Schedule and Team Schedule screens
+            </figcaption>
           </figure>
+        </section>
+        <section class="section">
+          <div class="text">
+            <h2>The Results</h2>
+            <p>
+              The iOS and Android apps were released about 6 months after work
+              began with basic functionality, and we would continue to improve
+              them and add new features over time. Though there were some
+              initial struggles getting them fully supported on older devices
+              they were generally well received and support was patched were
+              possible.
+            </p>
+          </div>
         </section>
       </article>
 
