update project tags

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
             />
             <div class="project-details">
               <div class="project-title">Dixa Accessibility Guidelines</div>
-              <div class="project-description">Web App, UI Design, Figma</div>
+              <div class="project-description">
+                Accessibility, Design Ops, Notion
+              </div>
             </div>
           </a>
           <a href="/projects/elevio-mobile-app/" class="project">
