--- a/projects/dixa-accessibility-guidelines/index.html
+++ b/projects/dixa-accessibility-guidelines/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <div class="grid">
+    <div class="layout">
       <!-- Nav -->
       <nav class="nav">
         <strong>
@@ -52,6 +52,7 @@
         <section class="section gallery">
           <figure class="figure">
             <img
+              class="figure-image"
               src="preview.png"
               style="view-transition-name: project-dag-preview"
             />
@@ -63,6 +64,7 @@
             <p>
               The
               <a
+                class="link"
                 href="https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A32019L0882"
                 >European Accessibility Act</a
               >
@@ -81,8 +83,10 @@
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img src="categories.png" />
-            <figcaption>Accessibility guidelines sample</figcaption>
+            <img class="figure-image" src="categories.png" />
+            <figcaption class="figure-caption">
+              Accessibility guidelines sample
+            </figcaption>
           </figure>
         </section>
         <section class="section">
@@ -90,7 +94,7 @@
             <h2>Building on a strong foundation</h2>
             <p>
               I took the success criteria created by
-              <a href="https://www.a11yproject.com/checklist/"
+              <a class="link" href="https://www.a11yproject.com/checklist/"
                 >The A11Y Project</a
               >
               , which consists of 64 items over 16 categories and rewrote them
@@ -111,8 +115,10 @@
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img src="example.png" />
-            <figcaption>Accessibility guidelines example</figcaption>
+            <img class="figure-image" src="example.png" />
+            <figcaption class="figure-caption">
+              Accessibility guidelines example
+            </figcaption>
           </figure>
         </section>
         <section class="section">
