--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <div class="grid">
+    <div class="layout">
       <!-- Nav -->
       <nav class="nav">
         <strong>
@@ -48,6 +48,7 @@
         <section class="section gallery">
           <figure class="figure">
             <img
+              class="figure-image"
               src="preview.png"
               style="view-transition-name: project-dds-preview"
             />
@@ -70,7 +71,7 @@
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img src="layout.png" />
+            <img class="figure-image" src="layout.png" />
           </figure>
         </section>
         <section class="section">
@@ -93,7 +94,7 @@
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img src="avatar.png" />
+            <img class="figure-image" src="avatar.png" />
           </figure>
         </section>
         <section class="section">
