--- a/projects/dixa-knowledge-management/index.html
+++ b/projects/dixa-knowledge-management/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <div class="grid">
+    <div class="layout">
       <!-- Nav -->
       <nav class="nav">
         <strong>
@@ -53,6 +53,7 @@
         <section class="section gallery">
           <figure class="figure">
             <img
+              class="figure-image"
               src="preview.png"
               style="view-transition-name: project-dkm-preview"
             />
@@ -60,30 +61,32 @@
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img src="home.png" />
-            <figcaption>Knowledge Management - Home design concept</figcaption>
+            <img class="figure-image" src="home.png" />
+            <figcaption class="figure-caption">
+              Knowledge Management - Home design concept
+            </figcaption>
           </figure>
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img src="collection.png" />
-            <figcaption>
+            <img class="figure-image" src="collection.png" />
+            <figcaption class="figure-caption">
               Knowledge Management - Collection design concept
             </figcaption>
           </figure>
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img src="category.png" />
-            <figcaption>
+            <img class="figure-image" src="category.png" />
+            <figcaption class="figure-caption">
               Knowledge Management - Category design concept
             </figcaption>
           </figure>
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img src="article.png" />
-            <figcaption>
+            <img class="figure-image" src="article.png" />
+            <figcaption class="figure-caption">
               Design concept for editing an article's meta information
             </figcaption>
           </figure>
