--- a/projects/elevio-mobile-app/index.html
+++ b/projects/elevio-mobile-app/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <div class="grid">
+    <div class="layout">
       <!-- Nav -->
       <nav class="nav">
         <strong>
@@ -48,6 +48,7 @@
         <section class="section gallery">
           <figure class="figure">
             <img
+              class="figure-image"
               src="preview.png"
               style="view-transition-name: project-ema-preview"
             />
@@ -71,8 +72,10 @@
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img src="screens-1.png" />
-            <figcaption>Leave, Dashboard and Availability screens</figcaption>
+            <img class="figure-image" src="screens-1.png" />
+            <figcaption class="figure-caption">
+              Leave, Dashboard and Availability screens
+            </figcaption>
           </figure>
         </section>
         <section class="section">
@@ -94,8 +97,8 @@
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img src="screens-2.png" />
-            <figcaption>
+            <img class="figure-image" src="screens-2.png" />
+            <figcaption class="figure-caption">
               Available Shifts, My Schedule and Team Schedule screens
             </figcaption>
           </figure>
