--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <div class="grid">
+    <div class="layout">
       <!-- Nav -->
       <nav class="nav">
         <strong>
