--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="layout">
       <!-- Nav -->
-      <nav class="nav">
+      <nav class="nav" style="view-transition-name: nav">
         <strong>
           <a href="/" aria-current="page">Benedict Forrest</a>
         </strong>
