--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="layout">
       <!-- Nav -->
-      <nav class="nav">
+      <nav class="nav" style="view-transition-name: nav">
         <strong>
           <a href="/">Benedict Forrest</a>
         </strong>
