--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Benedict Forrest - Product Designer</title>
     <!-- Custom Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
