--- a/projects/elevio-mobile-app/index.html
+++ b/projects/elevio-mobile-app/index.html
@@ -2,7 +2,10 @@
 <html lang="en" class="page-project">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
     <title>Elevio Mobile App | Benedict Forrest - Product Designer</title>
     <!-- Custom Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
