rename rotageek mobile app project

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
               </div>
             </div>
           </a>
-          <a href="/projects/elevio-mobile-app/" class="project">
+          <a href="/projects/rotageek-mobile-app/" class="project">
             <img
               class="project-image"
-              src="/projects/elevio-mobile-app/preview.png"
-              style="view-transition-name: project-ema-preview"
+              src="/projects/rotageek-mobile-app/preview.png"
+              style="view-transition-name: project-rma-preview"
             />
             <div class="project-details">
-              <div class="project-title">Elevio Mobile App</div>
+              <div class="project-title">Rotageek Mobile App</div>
               <div class="project-description">
                 Mobile App, UI Design, Figma
               </div>
