--- a/projects/rotageek-mobile-app/index.html
+++ b/projects/rotageek-mobile-app/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    <title>Elevio Mobile App | Benedict Forrest - Product Designer</title>
+    <title>Rotageek Mobile App | Benedict Forrest - Product Designer</title>
     <!-- Custom Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -42,7 +42,7 @@
               </svg>
               Back
             </a>
-            <h1 class="test">Elevio Mobile App</h1>
+            <h1 class="test">Rotageek Mobile App</h1>
             <p>
               A world-class scheduling and workforce management solution, now on
               your phone.
@@ -54,7 +54,7 @@
             <img
               class="figure-image"
               src="preview.png"
-              style="view-transition-name: project-ema-preview"
+              style="view-transition-name: project-rma-preview"
             />
           </figure>
         </section>
