add Dixa Sign In project

--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
           </div>
         </section>
         <section class="section gallery">
+          <a href="/projects/dixa-sign-in/" class="project">
+            <img
+              class="project-image"
+              src="/projects/dixa-sign-in/preview.png"
+              style="view-transition-name: project-dsi-preview"
+            />
+            <div class="project-details">
+              <div class="project-title">Dixa Sign in</div>
+              <div class="project-description">
+                UI Design, UX Design, Redesign
+              </div>
+            </div>
+          </a>
           <a href="/projects/dixa-design-system/" class="project">
             <img
               class="project-image"
