--- a/projects/dixa-sign-in/index.html
+++ b/projects/dixa-sign-in/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="page-project">
   <head>
     <meta charset="UTF-8" />
-    <title>Dixa Sign In Screen | Benedict Forrest - Product Designer</title>
+    <title>Dixa Sign In | Benedict Forrest - Product Designer</title>
     <!-- Custom Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -39,8 +39,8 @@
               Back
             </a>
             <h1 class="test">
-              Improving the Dixa login screen for it's users. And if it happens
-              to benefit us too, who's complaining?
+              Improving the Dixa sign in experience for our users. And if it
+              happens to benefit us too, who's complaining?
             </h1>
             <p>
               When thinking about ways to improve the Dixa web app our focus
@@ -150,7 +150,7 @@
           <figure class="figure">
             <img class="figure-image" src="authentication-variations.png" />
             <figcaption class="figure-caption">
-              There isn;t one perfect sign in method for everyone, I guess we
+              There isn't one perfect sign in method for everyone, I guess we
               really are all unique snowflakes like our parents said. ❄️
             </figcaption>
           </figure>
