update Dixa Sign In case study

--- a/projects/dixa-sign-in/index.html
+++ b/projects/dixa-sign-in/index.html
@@ -38,176 +38,92 @@
               </svg>
               Back
             </a>
-            <h1 class="test">
-              Improving the Dixa sign in experience for our users. And if it
-              happens to benefit us too, who's complaining?
-            </h1>
+            <h1 class="test">Improving the Dixa sign in experience</h1>
             <p>
-              When thinking about ways to improve the Dixa web app our focus
-              went to some of out most important features first. We'd think of
-              things like adding more data to the Dashboard, making more
-              messages visible at once in the Conversation screen, refreshing
-              the look and feel of the UI.
-            </p>
-            <p>
-              But there was one part of the app, a very important part of the
-              app, that users interacted with every day that we were
-              overlooking. A part of the app so important that if it stopped
-              working no other feature on the app could be accessed. A part of
-              the app staring us in the face nearly every day and yet somehow
-              completely forgotten about.
+              This in-house project with Dixa was completed in 6 weeks, with me
+              acting as the designer and coordinating with the project manager,
+              front-end developer and back-end developer. The goal was to
+              increase customer satisfaction with the sign in process by
+              removing barriers to a smooth user flow, and expanding the
+              offering of authentication methods to help land more clients.
             </p>
           </div>
         </header>
         <section class="section gallery">
           <figure class="figure">
-            <img class="figure-image" src="original.png" />
-            <figcaption class="figure-caption">
-              The original sign in screen: not terrible, but not great. I think
-              our users deserve more. 👍
-            </figcaption>
-          </figure>
-        </section>
-        <section class="section">
-          <div class="text">
-            <h2>The sign in screen, duh!</h2>
-            <p>
-              The sign in screen has facilitated hundreds of users signing in to
-              use Dixa at least once a week for many years. We should probably
-              have started a countdown to our one millionth sign in so we could
-              send the lucky user one of those giant, novelty cheques to
-              celebrate.
-            </p>
-            <p>
-              But just because users weren't sending us angry emails every other
-              day to complain about it, doesn't mean it didn't need
-              improvements. Taking a quick look at the original sign in screen,
-              there's nothing horribly wrong with it. But let's take a closer
-              look...
-            </p>
-          </div>
-        </section>
-        <section class="section gallery">
-          <figure class="figure">
             <img class="figure-image" src="design-review.png" />
-            <figcaption class="figure-caption">
-              This is how I see my design notes in my head... and in my
-              dreams... and in my nightmares. 😱
-            </figcaption>
           </figure>
         </section>
         <section class="section">
           <div class="text">
-            <h2>A closer look</h2>
+            <h2>Design Review</h2>
             <p>
-              Now, can I tell when a gap is 7px when it should be 8px with the
-              naked eye? Maybe... so developers be forewarned if you submit a
-              ticket for a design review. But if/when the naked eye fails, dev
-              tools pick up the slack. After reviewing the sign in screen in the
-              browser dev tools I found a lot off off-system values being used
-              for things like font sizes, colours, and gaps.
-            </p>
-            <p>
-              I also discovered areas that needed improvement in off-tone
-              language, a confusing mix up of terminology, and missing
-              accessibility features like placeholder text for inputs. All
-              little things that can be easily fixed now that we were of them.
-              With those details out of the way we could start making some real
-              juicy improvements to the way the sign in process works.
+              I started with a design review of the current sing in process. I
+              quickly identified areas where the design was off system, such as
+              non-standard colours and font size, and worked with the engineers
+              to rectify those. I also advised on ways to improve usability
+              including: adding a placeholder to demonstrate proper format, and
+              preventing auto corrections and capitalisation to make the process
+              of entering an email smoother.
             </p>
           </div>
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img class="figure-image" src="improved-style.png" />
-            <figcaption class="figure-caption">
-              Now that I'm not being haunted by little, floating, pink design
-              notes I can start focusing on the bigger stuff. 🔎
-            </figcaption>
+            <img class="figure-image" src="survey.png" />
           </figure>
         </section>
         <section class="section">
           <div class="text">
-            <h2>What is the right way to sign in?</h2>
+            <h2>User Research</h2>
             <p>
-              To sign in to Dixa you entered just your email, and a “magic link”
-              would be sent to your inbox. While this was a convenient and
-              secure way to sign in, it did have it's drawbacks. Sometimes
-              emails can be slow to arrive, or they might go into a Spam folder.
-              And if a user for some reason lost access to their email that
-              means they lost access to Dixa too.
-            </p>
-            <p>
-              I worked with our Customer Success team to identify what other
-              types of authentication methods are customers were familiar with
-              and would like to use to access Dixa. Then I worked with the
-              Development team to create the many variations of the UI we would
-              need.
+              While we working internally on improving the design, I created a
+              customer satisfaction form to capture our customer's current
+              opinion of the sign in process. The goal was to understand any
+              user frustrations, and what other alternative methods they may be
+              interested in using to sign in. Users who signed in during a 1
+              week time frame were prompted to give feedback, of which about 8%
+              did so. The customer success team also approached our bigger
+              clients to get their direct feedback.
             </p>
           </div>
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img class="figure-image" src="authentication-variations.png" />
-            <figcaption class="figure-caption">
-              There isn't one perfect sign in method for everyone, I guess we
-              really are all unique snowflakes like our parents said. ❄️
-            </figcaption>
+            <img class="figure-image" src="wireframes.png" />
           </figure>
         </section>
         <section class="section">
           <div class="text">
-            <h2>Listening to all of our users</h2>
+            <h2>Wireframes & Prototypes</h2>
             <p>
-              Paying attention to user feedback is critical in the product
-              development cycle. We gathered it through customer satisfaction
-              reviews, social media comments, and in-person and virtual client
-              meetings. But there's another important place I go to get
-              invaluable feedback: the QA team!
-            </p>
-            <p>
-              Yes, the QA testers use the product more than anyone on the team,
-              and they were signing in upwards of a dozen times a day, as a part
-              of testing bug patches and feature releases. And a unique problem
-              they were running into was not being able to easily tell one
-              client's sign in subdomain from another, as they often had
-              multiple open at once.
-            </p>
-            <p>
-              To address this issue I added the company's logo and name to the
-              sign in screen, which only appear on their unique subdomain,
-              rapha.dixa.com for example. While this change was mainly aimed at
-              improving our experience, it would go on to help our bigger
-              clients who had multi-domain customer support accounts.
+              Our customer insight taught us that while most users were at least
+              somewhat satisfied with the current process, some users were very
+              dissatisfied and were seeking alternative methods. The most
+              popular methods were Google, Email/Password, and Microsoft. We
+              also decided to proceed with JumpCloud authentication due to an
+              internal security initiative. I proceeded to create wireframes and
+              prototypes of the potential sign in processes so that we could
+              begin to plan our sprint work.
             </p>
           </div>
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img class="figure-image" src="custom-headers.png" />
-            <figcaption class="figure-caption">
-              The sound of annoyed groans and complaining in the office summons
-              me, it's kind of like my Bat-Signal. 🦇
-            </figcaption>
+            <img class="figure-image" src="variations.png" />
           </figure>
         </section>
         <section class="section">
           <div class="text">
-            <h2>The results</h2>
+            <h2>User Interface Designs</h2>
             <p>
-              John Wooden, and American basketball coach said “It's the little
-              details that are vital. Little things make big things happen.”
-              That's what this project was about, the little things. You don't
-              need to do a complete redesign of your application to make it feel
-              fresh. You don't need to rebuild your codebase from the group up
-              to make it faster, but it might help.
-            </p>
-            <p>
-              By making small adjustments, like ensuring adherence to the design
-              system tokens and writing style guide through design reviews;
-              making signing in quicker and more accessible through new
-              authentication methods; we made a meaningful improvement to the
-              usability of our app.
+              Once the work had been broken down into tickets for individual
+              front-end and back-end work I created design concepts in Figma for
+              each individual screen and variation. Along with working closely
+              with the front-end engineers, I leveraged Figma powerful
+              developer-focused features such as variables, components, and
+              developer mode, to ensure that the designs and codebase were in
+              sync and adhered to design guidelines.
             </p>
           </div>
         </section>
@@ -218,11 +134,23 @@
               src="preview.png"
               style="view-transition-name: project-dsi-preview"
             />
-            <figcaption class="figure-caption">
-              They might be small improvements, but on a screen you access every
-              week to do your job you really feel the difference. 💪
-            </figcaption>
           </figure>
+        </section>
+        <section class="section">
+          <div class="text">
+            <h2>Results</h2>
+            <p>
+              After the new authentication methods were made available to
+              customers we re-activated our customer satisfaction survey to
+              measure the impact these changes had. The average satisfaction
+              score went up from 3.8 to 4.5, with several users attributing
+              their high score to the speediness of their new sign in method.
+              Our internal testing also showed that the "average time to
+              Dashboard" reduced from 10 seconds to 4 seconds, when comparing
+              the new authentication methods to the original "magic email link"
+              method.
+            </p>
+          </div>
         </section>
       </article>
 
