--- a/index.html
+++ b/index.html
@@ -34,16 +34,15 @@
       <section class="section">
         <div class="text">
           <h1>
-            👋 Hey, I'm Benedict Forrest and I'll design the right system for
-            you.
+            👋 G'Day, I'm Benedict Forrest a Product Designer based in Sydney.
           </h1>
           <p>
-            I'm a product design living in Sydney and I specialise in designing
-            and building design systems for growing software companies. Along
-            with my expertise in crafting UI component libraries, I bring a
-            design-centred approach to product development that brings all team
-            members together to create the best solutions for your product
-            needs.
+            I have worked as Product Designer for growing Australian software
+            companies for over 8 years, guiding them through all stages of
+            product development. With end-to-end design process experience
+            including: conducting user research; creating wireframes,
+            high-fidelity designs, and prototypes; and creating pixel-perfect
+            cutups, I can bring valuable skills to any product team.
           </p>
         </div>
       </section>
