--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             I have worked as Product Designer for growing Australian software
             companies for over 8 years, guiding them through all stages of
             product development. With end-to-end design process experience
-            including: conducting user research; creating wireframes,
-            high-fidelity designs, and prototypes; and creating pixel-perfect
-            cutups, I can bring valuable skills to any product team.
+            including in: user research, wireframeing, high-fidelity designs,
+            prototypes, pixel-perfect cutups, and complex design systems. I can
+            bring valuable skills to any product team.
           </p>
         </div>
       </section>
