--- a/projects/dixa-knowledge-management/index.html
+++ b/projects/dixa-knowledge-management/index.html
@@ -16,6 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=block"
       rel="stylesheet"
     />
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" sizes="32x32" />
     <!-- Styles -->
     <link rel="stylesheet" href="/styles.css" />
   </head>
