add article editor mockup

--- a/projects/dixa-knowledge-management/index.html
+++ b/projects/dixa-knowledge-management/index.html
@@ -114,6 +114,14 @@
             </figcaption>
           </figure>
         </section>
+        <section class="section gallery">
+          <figure class="figure">
+            <img class="figure-image" src="editor.png" />
+            <figcaption class="figure-caption">
+              Design concept for editing an article's content
+            </figcaption>
+          </figure>
+        </section>
       </article>
 
       <!-- Footer -->
