update Dixa Design System case study

--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -122,6 +122,43 @@
         </section>
         <section class="section">
           <div class="text">
+            <h2>Discoverability and Usability</h2>
+            <p>
+              I ensured that the components in Figma were built with
+              discoverability and ease-of-use as the top priority. I gave each
+              component a description explaining when it should be used, and
+              made the individual properties simple to understand and use.
+            </p>
+            <p>
+              While I maintained a one-to-one match visually with the dev
+              components, I built and organised the Figma components in the best
+              way for Figma. This made maintaining, updating, and using the
+              components much easier.
+            </p>
+          </div>
+        </section>
+        <section class="section gallery">
+          <figure class="figure">
+            <img class="figure-image" src="details.png" />
+          </figure>
+        </section>
+        <section class="section">
+          <div class="text">
+            <h2>Prototypes and Animation</h2>
+            <p>
+              To reduce time spent on repetitive work, I added baked-in
+              prototype behaviour and animations for common component
+              interactions: such as hover states and loading spinners.
+            </p>
+          </div>
+        </section>
+        <section class="section gallery">
+          <figure class="figure">
+            <img class="figure-image" src="prototype.png" />
+          </figure>
+        </section>
+        <section class="section">
+          <div class="text">
             <h2>The Results</h2>
             <p>
               The improved components were rolled out slowly over several months
@@ -141,7 +178,7 @@
             </blockquote>
             <p>
               <strong>Hadrien Chastant - Product Designer @ Dixa</strong><br />
-              Direct Message in Slack, May 16th
+              Direct Message in Slack
             </p>
           </div>
         </section>
