--- a/about/index.html
+++ b/about/index.html
@@ -111,8 +111,9 @@
       <footer class="footer">
         <div class="text center">
           <div class="flex column gap-8">
-            <h2>Get in touch</h2>
-            <p>Want to know more about me or have a job offer? Let me know.</p>
+            <img src="/assets/memoji.png" class="memoji" />
+            <h2>Benedict Forrest</h2>
+            <p>Product Designer in Sydney NSW Australia.</p>
           </div>
           <div class="flex gap-24">
             <a href="mailto:benedict.forrest@me.com">
