update Dixa Design System case study

--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -146,9 +146,11 @@
           <div class="text">
             <h2>Prototypes and Animation</h2>
             <p>
-              To reduce time spent on repetitive work, I added baked-in
-              prototype behaviour and animations for common component
-              interactions: such as hover states and loading spinners.
+              I added prototype interaction and animations for common component
+              interactions: such as hover states and loading spinners, to reduce
+              time spent on repetitive work. Leveraging the power of Figma's new
+              prototyping features these can be built on top of to create more
+              powerful prototypes.
             </p>
           </div>
         </section>
