--- a/projects/dixa-sign-in/index.html
+++ b/projects/dixa-sign-in/index.html
@@ -176,8 +176,12 @@
       <!-- Footer -->
       <footer class="footer">
         <div class="text center">
+          <img
+            src="/assets/memoji.png"
+            class="memoji"
+            alt="Memoji of Benedict Forrest"
+          />
           <div class="flex column gap-8">
-            <img src="/assets/memoji.png" class="memoji" />
             <h2>Benedict Forrest</h2>
             <p>Product Designer in Sydney NSW Australia.</p>
           </div>
